--- a/index.html
+++ b/index.html
@@ -18,12 +18,18 @@
       width: 100px;
       height: 100px;
       background-color: brown;
+      border-radius: 5px;
+      margin-top: 50px;
+
     }
 
     #click {
       width: 100px;
       height: 50px;
       background-color: brown;
+      border-radius: 5px;
+      margin-top: 50px;
+
     }
   </style>
 </head>
